# tsdate

./: .codecov.yml  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .test_accuracy.py.swp  1  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENSE  LICNSE  README.md  compare.anc  compare.mut  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py  test_accuracy.py  tstime.py  tstime_tester.py
.circleci/: config.yml
.github/workflows/: docs.yml  lint.yml  tests.yml  wheels.yml
.github/workflows/docker/: buildwheel.sh
data/: .testing_relate.trees.icloud  OLD_prior_1000df.csv  README.md  all_working_maybe_outofafrica_mutations  all_working_maybe_outofafrica_tmrcas  all_working_maybe_vanilla_mutations  did_i_fix_it_50grid_mutations  did_i_fix_it_50grid_tmrcas  did_i_fix_it_exact_prior_mutations  did_i_fix_it_exact_prior_tmrcas  did_i_fix_it_mutations  did_i_fix_it_no_span_adjustment_mutations  did_i_fix_it_no_span_adjustment_tmrcas  did_i_fix_it_tmrcas  did_i_fix_it_upward_compare_mutations  did_i_fix_it_upward_compare_tmrcas  fixed_upward_downward_mutations  fixed_upward_downward_tmrcas  fixing_forward_mutations  fixing_forward_tmrcas  for_presentation_mutations  for_presentation_tmrcas  genetic_map.txt  geometric_scalinginside_vanilla_mutations  geometric_scalinginside_vanilla_tmrcas  inside_outside_70slices_mutations  inside_outside_70slices_tmrcas  inside_outside_n200_mutations  inside_outside_n200_tmrcas  insideoutside_vanilla_mutations  insideoutside_vanilla_tmrcas  iterative_approach_mutations  iterative_approach_tmrcas  maximization_mutations  maximization_tmrcas  mergedversion_inside_outside_n200_log_mutations  mergedversion_inside_outside_n200_log_tmrcas  mergedversion_inside_outside_n200_mutations  mergedversion_inside_outside_n200_tmrcas  n_100_500kb_5e9rec  (+61 more)
docs/: .readthedocs.yml  Makefile  _config.yml  _toc.yml  api.md  bibliography.md  build.sh  citation.md  cli.md  cli.rst  conf.py  historical_samples.md  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  methods.md  popsize.md  priors.md  python-api.md  python-api.rst  real-data.md  references.bib  requirements.txt  tutorial.rst  usage.md  variable_popsize.md
docs/data/: Makefile  basic_example.trees  make_examples.py  perf_sim_MEMTIME_data+42.csv
evaluation/: evaluate_accuracy.py  evaluation.py  test_accuracy.py
tests/: .test_cli.py.swp  TODO  __init__.py  conftest.py  distribution_functions.py  exact_moments.py  test_accuracy.py  test_approximations.py  test_cache.py  test_cli.py  test_discrepancy.py  test_evaluation.py  test_functions.py  test_hypergeo.py  test_inference.py  test_metadata.py  test_mutation_rate_map.py  test_noncontemporary.py  test_phasing.py  test_priors.py  test_provenance.py  test_rescaling.py  test_util.py  tsutil.py  utility_functions.py
tests/data/: few_trees.trees  many_trees.trees  one_tree.trees
tmp/: dated_ts_times  real_times  test.marker.txt  test.positions.txt  test.sample.txt  test.vcf  test_estimation.pairs.txt  test_estimation.sites.txt  testing.samples
tools/: Makefile  README.md
tsdate/: .cli.py.swp  __init__.py  __main__.py  _version.py  accelerate.py  age_inference.py  approx.py  base.py  cache.py  cli.py  constants.py  core.py  date.py  demography.py  discrepancy.py  discrete.py  evaluation.py  exceptions.py  hypergeo.py  metadata.py  mixture.py  node_time_class.py  normalisation.py  phasing.py  prior.py  provenance.py  rescaling.py  schemas.py  util.py  variational.py
tstime/: __init__.py  __main__.py  cli.py  tstime.py
