[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "tsdate"
dynamic = [
    "version",
]
authors = [
    { name = "tsdate Developers", email = "admin@tskit.dev" },
]
description = "Infer node ages from a tree sequence topology."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "inference",
    "dating",
    "tsdate",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "tskit>=1.0.0",
    "numpy",
    "scipy>=1.13.0",
    "numba>=0.58.1",
    "mpmath",
    "tqdm",
    "appdirs",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "http://pypi.python.org/pypi/tsdate"
Documentation = "https://tskit.dev/tsdate/docs/"
Changelog = "https://github.com/tskit-dev/tsdate/blob/main/CHANGELOG.rst"
"Bug Tracker" = "https://github.com/tskit-dev/tsdate/issues"
GitHub = "https://github.com/tskit-dev/tsdate"

[project.scripts]
tsdate = "tsdate.__main__:main"

[dependency-groups]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "msprime",
    "tsinfer",
    "numdifftools",
    "matplotlib",
]

docs = [
    "demesdraw",
    "matplotlib",
    "pandas",
    "stdpopsim",
    "tsinfer",
    "jupyter-book<2",
    "sphinx-issues",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
    "msprime",
    "ipywidgets",
    "sphinx-book-theme",
]

lint = [
    "ruff==0.15.1",
    "prek==0.3.3",
]

packaging = [
    "twine",
    "validate-pyproject[all]",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

[tool.setuptools]
packages = ["tsdate"]
include-package-data = true

[tool.setuptools_scm]
write_to = "tsdate/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "N806", "N802", "N803", # Various nags about uppercase vars
    "PT011", # `pytest.raises(ValueError)` is too broad, set the `match`
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["tsdate"]
known-third-party = [
  "msprime",
  "tskit",
  "numpy",
  "pytest",
]

