[metadata]
name = tsdate
author = Tskit Developers
author_email = admin@tskit.dev
license = MIT
description = Infer node ages from a tree sequence topology.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://pypi.python.org/pypi/tsdate
project_urls =
    Documentation = https://tsdate.readthedocs.io/en/latest/
    Changelog = https://github.com/tskit-dev/tsdate/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/tskit-dev/tsdate/issues
    GitHub = https://github.com/tskit-dev/tsdate
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    population genetics
    tree sequence
    ancestral recombination graph
    evolutionary tree
    inference
    dating
    tsdate
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = tsdate
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    tskit>=0.2.3
    scipy>1.2.3
    numba>=0.46.0
    mpmath
    tqdm
    appdirs

[options.entry_points]
console_scripts =
    tsdate=tsdate.__main__:main

[tool:pytest]
testpaths =
    tests
